[package]
name = "mermaid-parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Last-butnotleast/mermaid-parser"
description = "Lightweight Mermaid class-diagram parser powered by pest"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
thiserror = "2.0.12"


[dev-dependencies]
pretty_assertions = "1.4"